samples/_failures_safe/1761606626_22976a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_72bb9114.c: In function ‘main’:
./samples/SAFE/__tmp_72bb9114.c:158:12: error: missing terminating " character
  158 |     printf("Commands: 0
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_72bb9114.c:158:5: error: expected expression at end of input
  158 |     printf("Commands: 0
      |     ^~~~~~
./samples/SAFE/__tmp_72bb9114.c:158:5: error: expected declaration or statement at end of input
